--- a/bamn/index.html
+++ b/bamn/index.html
@@ -26,7 +26,7 @@ font-size:1em;
      
      .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: silver;
 }
 
 .topnav a {
@@ -36,15 +36,17 @@ font-size:1em;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+             font-family: 'Libre Franklin', sans-serif;
+
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #ccc;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: rgb(55, 117, 184);
   color: white;
 }
     
