--- a/bamn/index.html
+++ b/bamn/index.html
@@ -50,7 +50,7 @@ font-size:1em;
   color: white;
 }
     
-     .center {
+     .centered {
       text-align:center;  
      }
   </style>
@@ -68,7 +68,7 @@ font-size:1em;
    
   <h1 style="font-size:5em;text-align:center;margin:5px;" class="sans">Become a Notary</h1>
    <h2 style="font-size:2.5em;text-align:center;">Learn everything you need to know to become a Montana notary. For just $19.</h2>
-   <a class="button center">Get started</a>
+   <a class="button centered">Get started</a>
    
 </body>
   </html>
