--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
 		     <meta name="description" content="the personal website of james underwood"> 
@@ -17,7 +19,8 @@ overflow: hidden;
 			
 		body {
 			/* background:tan; */
-			background-image: url("/assets/starssss.gif");
+			/* background-image: url("/assets/starssss.gif"); */
+			background:black;
 			            background-attachment: fixed;
   padding: 0;
 
@@ -36,7 +39,8 @@ overflow: hidden;
 
 margin-left:15%;
 margin-right:15%;
-		background-image: url("/assets/lightblueweave.gif");
+		/* background-image: url("/assets/lightblueweave.gif"); */
+		background:#d2f8fc;
 		
 
 		
