--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ margin-right:25%;
 		width:400px;
 		vertical-align:top;
 			background:darkseagreen;
-		
+		border-radius:12px;
+		margin:10px;
 			}
 
 .smoldate {
