--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ I8,      ,8'
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
-<h3 style="margin-left:100px;margin-right:100px">Howdy! I am a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website. :]</h3>	
+<h3 style="margin-left:100px;margin-right:100px">Hi! I am a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website. :]</h3>	
 
 <div class="sbs">
 	
