--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ overflow: hidden;
 margin-left:15%;
 margin-right:15%;
 		/* background-image: url("/assets/lightblueweave.gif"); */
-		background:#d2f8fc;
+		/* background:#d2f8fc; */
+				background-image: url("/assets/bluetile2.png");
+
 		
 
 		
