--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 
 <html>
 	<head>
+		
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		     <meta name="description" content="the personal website of james underwood"> 
 		<title>JamesUnderwood.net</title>
 		<style>
