--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ I8,      ,8'
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
-<h5 style="margin-left:100px;margin-right:100px">I'm a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website. I put things I find neat on here.</h5>	
+<h4 style="margin-left:100px;margin-right:100px">I'm a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website. I put things I find interesting on here.</h4>	
 
 
 <div class="sbs">
