--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@ old
    data-tld="me"></p>
 		
 
-<div id="weblog"><h4>weblog</h4>
-	<h5>
+<!-- <div id="weblog"><h4>weblog</h4>
+	<h5>5/19/23</h5>
+	<p>Last proper day of high school. How crazy. Afterwars went to the bee lab and assembled and painted supers.
 	
-	
-</div>
+</div> -->
 
 
 <!--
