--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ I8,      ,8'
 </div>
 
 <div class="sbs">
-<h5 class="sectionHeader">comp sci projects</h5>
+<h5 class="sectionHeader">some comp sci projects</h5>
 	
 		<li>
 						<a href="/autoannouncer">AutoAnnouncer v1.0.1</a>
@@ -308,6 +308,10 @@ I8,      ,8'
 	
 		<li><a href="cgol">Conway's Game of Life</a> <span class="smoldate">3/2018</span></li>
 	<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">3/2018</span></li>
+	</li><a href="https://github.com/junderw00d">old github</a></li>
+	</li><a href="https://github.com/realjunderwood">new github</a></li>
+
+
 </div>
 
 								
