--- a/index.html
+++ b/index.html
@@ -164,6 +164,17 @@ margin-right:0.5px;
 			
 	</style>
 	</head>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7FJJHQC5M4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7FJJHQC5M4');
+</script>
+
 	<body>
 		<!-- <div style="background:silver;position:absolute;z-index:99;width:98.5%;margin:0.2%;height:100%;opacity:0.965;">
 			<center>
