--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ margin-right:0.5px;
 					
 					
 				<td>
-												<img src="/assets/construction.gif" style="width:140px"></img>
+												<img src="/assets/saucer.gif" style="width:60px"></img>
 					</td>
 					<td>
 						<pre style="font-size:5px;display:inline;color:white;">
