--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ I8,      ,8'
 	
 		<li><a href="cgol">Conway's Game of Life</a> <span class="smoldate">3/2018</span></li>
 	<li><a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">3/2018</span></li>
-	</li><a href="https://github.com/junderw00d">old github</a></li>
-	</li><a href="https://github.com/realjunderwood">new github</a></li>
+	<li><a href="https://github.com/realjunderwood">github</a></li>
+	<li><a href="https://github.com/junderw00d">github (old)</a></li>
 
 
 </div>
