--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ old
 -->
 			<div id="guestbook">
 				<img src="/assets/guestbook2.gif">
-				<h3><a href="/guestbook.html">click here to sign the guestbook</a></h3>
+				<h3><a href="/guestbook.html">guestbook</a></h3>
 				
 				
 	</div>
@@ -410,11 +410,11 @@ old
    data-tld="me"></p>
 		
 
-<!-- <div id="weblog"><h4>weblog</h4>
+<div id="weblog"><h4>weblog</h4>
 	<h5>5/19/23</h5>
-	<p>Last proper day of high school. How crazy. Afterwars went to the bee lab and assembled and painted supers.
-	
-</div> -->
+	<p>Last proper day of high school. How crazy. Afterwards went to the bee lab and assembled and painted supers.
+
+</div>
 
 
 <!--
