--- a/old/campaign2/index.html
+++ b/old/campaign2/index.html
@@ -56,7 +56,7 @@ white,
 		<div class="container">
 			<!--<h2 style="margin:0">My campaign is on &lInstagram</h2>-->
 			<h2 style="margin:0">My campaign is on Instagram</h2>
-			<h4 style="margin-top:0;"><a href="//instagram.com/junderwoodjunderwood" target="_BLANK">@junderwoodjunderwood</a></h4>
+			<h4 style="margin-top:0;"><a href="//instagram.com/junderwooood" target="_BLANK">@junderwooood</a></h4>
 <!--			<p style="margin-top:0;">The account has been disabled until next year's election season when it will reopen as @UnderwoodForUAHS.</p>-->
 <p>Also check out the <a href="//instagram.com/uahs2023" target="_BLANK">@uahs2023</a> account.</p>
 	
