--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ I8,      ,8'
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
-<h4 style="margin-left:100px;margin-right:100px">I'm a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website.</h4>	
+<h4 style="margin-left:100px;margin-right:100px">Welcome! I'm a high school senior in Ohio and an incoming freshman at Dartmouth College. This is my personal website.</h4>	
 
 
 <div class="sbs">
