--- a/index.html
+++ b/index.html
@@ -309,8 +309,12 @@ I8,      ,8'
 </div>
 
 <div class="sbs">
-<h5 class="sectionHeader">some comp sci projects</h5>
-	
+<h5 class="sectionHeader">comp sci stuff</h5>
+	<li>
+						<a href="/codenames.html">Finding Codenames Clues using NLP</a>
+						<span class="smoldate">6/2023</span>
+
+	</li>
 		<li>
 						<a href="/autoannouncer">AutoAnnouncer v1.0.1</a>
 						<span class="smoldate">7/1/2022</span>
