--- a/codenames.html
+++ b/codenames.html
@@ -1,2 +1,3 @@
 <h1>Codenames Cluefinder</h1>
 <h2>Finding Codenames Clues using NLP</h2>
+<p>I wrote a little Python script to generate clues for the game [Codenames](https://en.wikipedia.org/wiki/Codenames_(board_game)) using GLoVE vectors. The program looks for clues that are close to each of the "good" words (your side's words) but far from the "bad" words (the other side's words). </p>
