--- a/indexnew.html
+++ b/indexnew.html
@@ -8,14 +8,24 @@
     #hpageWelcome {
 font-size:4em;
     }
+    #maincontainer {
+margin-left:20%;
+      margin-right:20%;
+    }
   </style>
 
   
 </head>
 <body>
-  
+  <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
+    <h2>I'm a high school senior and a rising freshman at Dartmouth College.</h2>
 
+
+<div>
+    <h2>My work</h2>
+</div>
+  </div>
 </body>
 
   </html>
