--- a/indexnew.html
+++ b/indexnew.html
@@ -12,6 +12,7 @@ font-size:4em;
 margin-left:20%;
       margin-right:20%;
     }
+    
   </style>
 
   
@@ -21,11 +22,41 @@ margin-left:20%;
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2>I'm a high school senior and a rising freshman at Dartmouth College.</h2>
 
-
+<h2>Email me <span id="emailmea"></span></h2>
 <div>
     <h2>Recent work</h2>
 </div>
   </div>
+
+
+<script>
+  function shuffleArray(array) {
+    for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+    }
+}
+
+
+
+emailmearray = ["a love letter", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "a summons", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a conspiracy theory", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "your social security number", "a podcast rec", "a zine", "a travelogue", "your website"]
+shuffleArray(emailmearray);
+curNewsIndex = 0;
+window.setInterval(function(){
+
+    curNewsIndex++
+
+    if (curNewsIndex >= emailmearray.length) {
+        curNewsIndex = 0;
+        shuffleArray(emailmearray);
+    }
+document.getElementById("emailmea").innerHTML = emailmearray[curNewsIndex];
+
+},1000);
+</script>
+
+
+  
 </body>
 
   </html>
