--- a/indexnew.html
+++ b/indexnew.html
@@ -12,7 +12,9 @@ font-size:4em;
 margin-left:20%;
       margin-right:20%;
     }
-
+#cursivefooter {
+  text-align:center;
+}
 
     #emailmea {
 text-decoration: underline;
@@ -33,6 +35,32 @@ text-decoration: underline;
   </div>
 
 
+
+  <div id="cursivefooter">
+						<pre style="font-size:5px;display:inline;color:black;">
+  
+       gg                                                        ,ggg,         gg                                                                                                      
+    dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
+   dP Yb                                                      Yb, `88        88                        8I                                                                         8I 
+  ,8  `8,                                                      `"  88        88                        8I                                                                         8I 
+  I8   Yb                                                          88        88                        8I                                                                         8I 
+  `8b, `8,     ,gggg,gg   ,ggg,,ggg,,ggg,    ,ggg,     ,g,         88        88   ,ggg,,ggg,     ,gggg,8I   ,ggg,    ,gggggg,  gg    gg    gg     ,ggggg,      ,ggggg,      ,gggg,8I 
+   `"Y88888   dP"  "Y8I  ,8" "8P" "8P" "8,  i8" "8i   ,8'8,        88        88  ,8" "8P" "8,   dP"  "Y8I  i8" "8i   dP""""8I  I8    I8    88bg  dP"  "Y8ggg  dP"  "Y8ggg  dP"  "Y8I 
+       "Y8   i8'    ,8I  I8   8I   8I   8I  I8, ,8I  ,8'  Yb       88        88  I8   8I   8I  i8'    ,8I  I8, ,8I  ,8'    8I  I8    I8    8I   i8'    ,8I   i8'    ,8I   i8'    ,8I 
+        ,88,,d8,   ,d8b,,dP   8I   8I   Yb, `YbadP' ,8'_   8)      Y8b,____,d88,,dP   8I   Yb,,d8,   ,d8b, `YbadP' ,dP     Y8,,d8,  ,d8,  ,8I  ,d8,   ,d8'  ,d8,   ,d8'  ,d8,   ,d8b,
+    ,ad88888P"Y8888P"`Y88P'   8I   8I   `Y8888P"Y888P' "YY8P8P      "Y888888P"Y88P'   8I   `Y8P"Y8888P"`Y8888P"Y8888P      `Y8P""Y88P""Y88P"   P"Y8888P"    P"Y8888P"    P"Y8888P"`Y8
+  ,dP"'   Yb                                                                                                                                                                         
+ ,8'      I8                                                                                                                                                                         
+,8'       I8                                                                                                                                                                         
+I8,      ,8'                                                                                                                                                                         
+`Y8,___,d8'                                                                                                                                                                          
+  "Y888P"                                                                                                                                                                            
+
+</pre>
+    							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;" class="comicSans">.net</span>
+  </div>
+
+
 <script>
   function shuffleArray(array) {
     for (let i = array.length - 1; i > 0; i--) {
@@ -43,7 +71,7 @@ text-decoration: underline;
 
 
 
-emailmearray = ["a love letter", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "a summons", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a conspiracy theory", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "your social security number", "a podcast rec", "a zine", "a travelogue", "your website"]
+emailmearray = ["a love letter", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a conspiracy theory", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "your social security number", "a podcast rec", "a zine", "a travelogue", "your website"]
 shuffleArray(emailmearray);
   
 curNewsIndex = 0;
