--- a/indexnew.html
+++ b/indexnew.html
@@ -71,7 +71,7 @@ I8,      ,8'
 
 
 
-emailmearray = ["a love letter", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a conspiracy theory", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "your social security number", "a podcast rec", "a zine", "a travelogue", "your website"]
+emailmearray = ["a love letter", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "your social security number", "a podcast rec", "a zine", "a travelogue", "your website"]
 shuffleArray(emailmearray);
   
 curNewsIndex = 0;
