--- a/indexnew.html
+++ b/indexnew.html
@@ -28,7 +28,7 @@ text-decoration: underline;
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2>I'm a high school senior and a rising freshman at Dartmouth College.</h2>
 
-<h2 style="font-weight: 300;">Email me <span id="emailmea"></span></h2>
+<h2 style="font-weight: 300;">Email me <span id="emailmea">something to read</span></h2>
 <div>
     <h2>Recent work</h2>
 </div>
