--- a/indexnew.html
+++ b/indexnew.html
@@ -31,6 +31,11 @@ text-decoration: underline;
 <h2 style="font-weight: 300;">Email me <span id="emailmea">something to read</span></h2>
 <div>
     <h2>Recent work</h2>
+	<ul>
+<li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
+		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
+
+	</ul>
 </div>
   </div>
 
