--- a/indexnew.html
+++ b/indexnew.html
@@ -3,7 +3,8 @@
   <style>
 
     body {
-      font-family: "Helvetica"
+      font-family: "Helvetica";
+	        min-height: 100vh;
     }
     #hpageWelcome {
 font-size:4em;
@@ -14,6 +15,7 @@ margin-left:20%;
     }
 #cursivefooter {
   text-align:center;
+	    margin-top: ???px;
 }
 
     #emailmea {
@@ -62,7 +64,7 @@ I8,      ,8'
   "Y888P"                                                                                                                                                                            
 
 </pre>
-    							<span id="dotNet" style="font-size:24px;font-weight:600;color:white;" class="comicSans">.net</span>
+    							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;" class="comicSans">.net</span>
   </div>
 
 
