--- a/indexnew.html
+++ b/indexnew.html
@@ -15,7 +15,7 @@ margin-left:20%;
     }
 #cursivefooter {
   text-align:center;
-	    margin-top: ???px;
+	    margin-top: 500px;
 }
 
     #emailmea {
