--- a/indexnew.html
+++ b/indexnew.html
@@ -21,6 +21,14 @@ margin-left:20%;
     #emailmea {
 text-decoration: underline;
     }
+
+	  @font-face {
+  font-family: 'comicc';
+  src: url("/comic-sans-ms/COMIC.TTF");
+}
+	 .comicSans {
+font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
+		}
   </style>
 
   
