--- a/indexnew.html
+++ b/indexnew.html
@@ -36,7 +36,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <body>
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
-    <h2>I'm a high school senior and a rising freshman at Dartmouth College.</h2>
+    <h2>I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, linguistics, and journalism.</h2>
 
 <h2 style="font-weight: 300;">Email me <span id="emailmea">something to read</span></h2>
 <div>
