--- a/indexnew.html
+++ b/indexnew.html
@@ -29,6 +29,10 @@ text-decoration: underline;
 	 .comicSans {
 font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
 		}
+
+	  .smoldate {
+  font-size:11px;
+}
   </style>
 
   
@@ -44,7 +48,10 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 	<ul>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
 		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
-
+<li>
+						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
+						<span class="smoldate">3/13/2022</span>
+					</li>
 	</ul>
 </div>
   </div>
