--- a/indexnew.html
+++ b/indexnew.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
 
     body {
@@ -33,6 +34,11 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 	  .smoldate {
   font-size:11px;
 }
+
+
+                .century {
+                                                                    font-family: 'Century Schoolbook', sans-serif;
+		}
   </style>
 
   
@@ -40,7 +46,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <body>
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
-    <h2>I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
+    <h2 class="century">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 
 <h2 style="font-weight: 300;">Email me <span id="emailmea">something to read</span></h2>
 <div>
