--- a/indexnew.html
+++ b/indexnew.html
@@ -48,8 +48,6 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2>I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 
-<h2 style="font-weight: 300;">Email me <span id="emailmea">something to read</span></h2>
-<div>
     <h2>Recent work</h2>
 	<ul>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
@@ -59,7 +57,11 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 						<span class="smoldate">3/13/2022</span>
 					</li>
 	</ul>
-</div>
+
+  <h2 style="font-weight: 400;">Email me <span id="emailmea">something to read</span></h2>
+<p>I love a good email -- hit me up! <code>jcunderwood [at] protonmail [dot] com</code></p>
+  
+  
   </div>
 
 
@@ -85,7 +87,7 @@ I8,      ,8'
   "Y888P"                                                                                                                                                                            
 
 </pre>
-    							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;" class="comicSans">.net</span>
+    							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;" class="comicSans">.net</span>
   </div>
 
 
