--- a/indexnew.html
+++ b/indexnew.html
@@ -47,7 +47,13 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2 style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
+<figure>
+  <p><img src="rollup.jpg"
+    width="140px"
+  <figcaption>Eating a fruit roll-up</figcaption>
+</figure>
 
+	  
     <h2>Recent work</h2>
 	<ul>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
