--- a/indexnew.html
+++ b/indexnew.html
@@ -48,7 +48,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2 style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 <figure>
-  <p><img src="rollup.jpg"
+  <p><img src="rollup.jpeg"
     width="140px"
   <figcaption>Eating a fruit roll-up</figcaption>
 </figure>
@@ -107,7 +107,7 @@ I8,      ,8'
 
 
 
-emailmearray = ["a love letter", "advice", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a cool court opinion", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
+emailmearray = ["a love letter", "advice", "a comic", "something to read", "your solution to the trolley problem", "a job offer", "a catchy tune", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a cool court opinion", "a tasty recipe", "a Wikipedia article", "something thought-provoking", "small talk", "a surprising etymology", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take on current affairs", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
 shuffleArray(emailmearray);
   
 curNewsIndex = 0;
