--- a/indexnew.html
+++ b/indexnew.html
@@ -64,7 +64,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 					</li>
 	</ul>
 <hr>
-  <h2 style="font-weight: 400;">Email me <span id="emailmea">something to read</span></h2>
+  <h2>Email me <span id="emailmea">something to read</span></h2>
 <p>I love a good email -- hit me up! <code>jcunderwood [at] protonmail [dot] com</code></p>
   
   
