--- a/indexnew.html
+++ b/indexnew.html
@@ -48,7 +48,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2 style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 <figure>
-  <p><img src="rollup.jpeg"
+  <p><img src="rollup.JPG"
     width="140px"
   <figcaption>Eating a fruit roll-up</figcaption>
 </figure>
