--- a/indexnew.html
+++ b/indexnew.html
@@ -10,7 +10,7 @@
     #hpageWelcome {
 font-size:4em;
     }
-    #maincontainer {
+    #maincontainer {x
 margin-left:15%;
       margin-right:15%;
     }
@@ -107,7 +107,7 @@ I8,      ,8'
 
 
 
-emailmearray = ["a love letter", "a painting", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a cool court opinion", "a tasty recipe", "a Wikipedia article", "a math problem", "your manifesto", "a screenplay", "something thought-provoking", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "a hot take", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
+emailmearray = ["a love letter", "a painting", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a cool court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "a screenplay", "something thought-provoking", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "a hot take", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
 shuffleArray(emailmearray);
   
 curNewsIndex = 0;
