--- a/indexnew.html
+++ b/indexnew.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
@@ -10,7 +11,7 @@
     #hpageWelcome {
 font-size:4em;
     }
-    #maincontainer {x
+    #maincontainer {
 margin-left:15%;
       margin-right:15%;
     }
