--- a/indexnew.html
+++ b/indexnew.html
@@ -3,7 +3,10 @@
 <head>
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
-
+hr {
+        background-color: black;
+        border: none;
+}
     body {
       font-family: "Helvetica";
 	        min-height: 100vh;
