--- a/indexnew.html
+++ b/indexnew.html
@@ -4,8 +4,7 @@
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
 hr {
-        background-color: black;
-        border: none;
+        border:1.5px solid black;
 }
     body {
       font-family: "Helvetica";
