--- a/indexnew.html
+++ b/indexnew.html
@@ -4,7 +4,7 @@
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
 hr {
-        border:1.5px solid black;
+        border:1px solid black;
 }
     body {
       font-family: "Helvetica";
@@ -42,6 +42,9 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
                 .century {
                                                                     font-family: 'Century Schoolbook', sans-serif;
 		}
+	  figure {
+    display: inline-block;
+	  }
   </style>
 
   
@@ -56,7 +59,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
   <figcaption>Eating a fruit roll-up</figcaption>
 </figure>
 
-	  
+	  <hr>
     <h2>Recent work</h2>
 	<ul>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
