--- a/indexnew.html
+++ b/indexnew.html
@@ -12,6 +12,9 @@ hr {
     }
     #hpageWelcome {
 font-size:4em;
+	    display:inline-block;
+	    width:80%;
+	    vertical-align:top;
     }
     #maincontainer {
 margin-left:15%;
