--- a/indexnew.html
+++ b/indexnew.html
@@ -12,10 +12,13 @@ hr {
     }
     #hpageWelcome {
 font-size:4em;
-	    display:inline-block;
+	
+    }
+	  #intrograph {
+    display:inline-block;
 	    width:80%;
 	    vertical-align:top;
-    }
+	  }
     #maincontainer {
 margin-left:15%;
       margin-right:15%;
@@ -55,7 +58,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <body>
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
-    <h2 style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
+    <h2 id="intrograph" style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 <figure>
   <img src="rollup.JPG" width="140px">
   <figcaption>Eating a fruit roll-up</figcaption>
