--- a/indexnew.html
+++ b/indexnew.html
@@ -61,7 +61,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
     <h2 id="intrograph" style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
 <figure>
   <img src="rollup.JPG" width="140px">
-  <figcaption>Eating a fruit roll-up</figcaption>
+  <figcaption>&ShortUpArrow; Eating a fruit roll-up</figcaption>
 </figure>
 
 	  <hr>
