--- a/indexnew.html
+++ b/indexnew.html
@@ -82,9 +82,10 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
   </div>
 
 
-
+<hr>
   <div id="cursivefooter">
-						<pre style="font-size:3px;display:inline;color:black;">
+	  <h2>Imprint</h2>
+						<pre style="font-size:4.25px;display:inline-block;color:black;">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
