--- a/indexnew.html
+++ b/indexnew.html
@@ -76,7 +76,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 	</ul>
 <hr>
   <h2>Email me <span id="emailmea">something to read</span></h2>
-<p>I love a good email. You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
+<p>I love a good email (<a href="https://en.wikipedia.org/wiki/BlitzMail">called a &ldquo;blitz&rdquo; in Dartmouth lingo</a>). You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
   
   </div>
