--- a/indexnew.html
+++ b/indexnew.html
@@ -24,9 +24,11 @@ margin-left:15%;
       margin-right:15%;
     }
 #cursivefooter {
-  text-align:center;
 	    margin-top: 20px;
 }
+	  #imprintcontent {
+text-align:center;
+	  }
 
     #emailmea {
 text-decoration: underline;
@@ -79,12 +81,12 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <p>I love a good email (<a href="https://en.wikipedia.org/wiki/BlitzMail">called a &ldquo;blitz&rdquo; in Dartmouth lingo</a>). You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
   
-  </div>
 
 
 <hr>
   <div id="cursivefooter">
 	  <h2>Imprint</h2>
+	  <div id="imprintcontent">
 						<pre style="font-size:4.25px;display:inline-block;color:black;">
   
        gg                                                        ,ggg,         gg                                                                                                      
@@ -107,7 +109,7 @@ I8,      ,8'
 </pre>
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;" class="comicSans">.net</span>
   </div>
-
+  </div>
 
 <script>
   function shuffleArray(array) {
