--- a/indexnew.html
+++ b/indexnew.html
@@ -107,7 +107,7 @@ I8,      ,8'
   "Y888P"                                                                                                                                                                            
 
 </pre>
-    							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;" class="comicSans">.net</span>
+    							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
   </div>
   </div>
 
