--- a/indexnew.html
+++ b/indexnew.html
@@ -80,14 +80,27 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
   <h2>Email me <span id="emailmea">something to read</span></h2>
 <p>I love a good email (<a href="https://en.wikipedia.org/wiki/BlitzMail">called a &ldquo;blitz&rdquo; in Dartmouth lingo</a>). You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
-  
+<hr>
+	  <h2>Follow me elsewhere</h2>
+	  <ul>
+<li>
+		  		<li><a href="https://www.goodreads.com/user/show/153388050-j-u">Goodreads</a></li>
+
+				<li><a href="https://instagram.com/junderwooood">Instagram</a></li>
+				<li><a href="https://letterboxd.com/jayunder/">Letterboxd</a></li>
+		  		<li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">Spotify</a></li>
+
+
+		  
+		  
+	  </ul>
 
 
 <hr>
   <div id="cursivefooter">
 	  <h2>Imprint</h2>
 	  <div id="imprintcontent">
-						<pre style="font-size:4.25px;display:inline-block;color:black;">
+						<pre style="font-size:4.25px;display:inline-block;color:black;font-weight:1000">
   
        gg                                                        ,ggg,         gg                                                                                                      
     dP8,                                                      dP""Y8a        88                        8I                                                                         8I 
