--- a/indexnew.html
+++ b/indexnew.html
@@ -121,7 +121,9 @@ I8,      ,8'
 
 </pre>
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
-  </div>
+<img src="/assets/8831/jund8831.png">
+		  <small>@copy; 2023</small>
+	  </div>
   </div>
 
 <script>
