--- a/indexnew.html
+++ b/indexnew.html
@@ -139,17 +139,17 @@ I8,      ,8'
 emailmearray = ["a love letter", "a video game you like", "a call to action", "misinformation", "lofi beats to relax/study to", "your favorite human right", "a crossword", "a spurious correlation", "your theory of everything", "a factsheet", "art", "a map", "feedback", "an apology", "an anecdote", "something to laugh at", "a sick typeface", "your <i>raison d'être</i>", "a painting", "a press inquiry", "spam", "coupons", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a well-written court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "your screenplay", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
 shuffleArray(emailmearray);
   
-curNewsIndex = 0;
+cureindex = 0;
   
 window.setInterval(function(){
 
-    curNewsIndex++
+    cureindex++
 
-    if (curNewsIndex >= emailmearray.length) {
-        curNewsIndex = 0;
+    if (cureindex >= emailmearray.length) {
+        cureindex = 0;
         shuffleArray(emailmearray);
     }
-document.getElementById("emailmea").innerHTML = emailmearray[curNewsIndex];
+document.getElementById("emailmea").innerHTML = emailmearray[cureindex];
 
 },1000);
 </script>
