--- a/indexnew.html
+++ b/indexnew.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>James Underwood Dot Net</title>
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
 hr {
