--- a/indexnew.html
+++ b/indexnew.html
@@ -101,6 +101,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
   <div id="cursivefooter">
 	  <h2>Imprint</h2>
 	  <div id="imprintcontent">
+		  <div>
 						<pre style="font-size:4.25px;display:inline-block;color:black;font-weight:1000">
   
        gg                                                        ,ggg,         gg                                                                                                      
@@ -122,8 +123,9 @@ I8,      ,8'
 
 </pre>
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
-<img src="/assets/8831/jund8831.png">
-		  <small>@copy; 2023</small>
+	  </div>
+		  <img src="/assets/8831/jund8831.png">
+		  <small>&copy; 2023</small>
 	  </div>
   </div>
 
