--- a/indexnew.html
+++ b/indexnew.html
@@ -84,7 +84,7 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 <hr>
 	  <h2>Follow me elsewhere</h2>
 	  <ul>
-<li>
+
 		  		<li><a href="https://www.goodreads.com/user/show/153388050-j-u">Goodreads</a></li>
 
 				<li><a href="https://instagram.com/junderwooood">Instagram</a></li>
@@ -125,7 +125,8 @@ I8,      ,8'
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
-		  <small>&copy; 2023</small>
+		  <p><small>Franklin County, OH</small></p>
+		 <p><small>&copy; 2023</small></p>
 	  </div>
   </div>
 
