--- a/indexnew.html
+++ b/indexnew.html
@@ -152,8 +152,10 @@ I8,      ,8'
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
-		  <p><small>Franklin County, OH</small></p>
-		 <p><small>&copy; 2023</small></p>
+		  <small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small>
+		  <small>Franklin County, OH</small>
+		 <small>&copy; 2023</small>
+		  
 	  </div>
   </div>
 
