--- a/indexnew.html
+++ b/indexnew.html
@@ -153,7 +153,7 @@ I8,      ,8'
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
 		  <small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small>
-		  <small>Franklin County, OH</small>
+		  <small>Franklin County, Ohio</small>
 		 <small>&copy; 2023</small>
 		  
 	  </div>
@@ -202,7 +202,7 @@ var arraylet2 = arraylet.filter(function(value, index, arr){
   arraylet2.forEach(function(val) {
 
     let ttt = val.substring(val.indexOf(":") + 7, val.length);
-    $('<div class="guestbooklisting" /><p class="postp" ').text(ttt).appendTo('#container');
+    $('<div class="guestbooklisting" /><p class="postp" ').text(ttt).appendTo('#gbContainer');
 
   });
 
