--- a/indexnew.html
+++ b/indexnew.html
@@ -58,13 +58,14 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 
 
 .guestbooklisting {
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 15px;
-  background: lightblue;
-  padding: 5px;
-  border: 1.5px solid black;
-  border-radius: 4px;
+margin-top: 15px;
+background: #fcfbe3;
+padding: 5px;
+border: 1.5px solid black;
+border-radius: 4px;
+display: inline-block;
+margin-left: 6px;
+margin-right: 6px;
 
          }
 
@@ -99,8 +100,15 @@ font-family: "comicc", "Comic Sans", "Comic Sans MS", "Chalkboard", "ChalkboardS
 
 
 	  <h2>Guestbook</h2>
-		       <div id="gbContainer"></div>
 
+
+
+<div id="gbContainer" style="height: 200px;overflow: scroll;background: #eeeeee;width: 50%;">
+
+</div>
+
+	  
+	  
 
 
 
