--- a/indexnew.html
+++ b/indexnew.html
@@ -69,6 +69,10 @@ margin-right: 6px;
 
          }
 
+	  .smallp {
+		margin:0;
+	  }
+
 	  
   </style>
 
@@ -160,9 +164,9 @@ I8,      ,8'
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
-		  <small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small>
-		  <small>Franklin County, Ohio</small>
-		 <small>&copy; 2023</small>
+		  <p class="smallp">small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small></p>
+		  <p class="smallp"><small>Franklin County, Ohio</small></p>
+		 <p class="smallp"><small>&copy; 2023</small></p>
 		  
 	  </div>
   </div>
