--- a/indexnew.html
+++ b/indexnew.html
@@ -164,7 +164,7 @@ I8,      ,8'
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
-		  <p class="smallp">small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small></p>
+		  <p class="smallp"><small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small></p>
 		  <p class="smallp"><small>Franklin County, Ohio</small></p>
 		 <p class="smallp"><small>&copy; 2023</small></p>
 		  
