--- a/indexnew.html
+++ b/indexnew.html
@@ -104,7 +104,7 @@ margin-right: 6px;
 
 
 	  <h2>Guestbook</h2>
- <div style="position:relative;top:-150px;">
+ <div style="position:relative;top:-150px;background:rgb(118,118,118)">
 <div style="height: 350px;width:600px;overflow: hidden;clip-path: inset(45% 0px 0px 0 round 0px);">			
 <iframe scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLScoxa2YJYzOS0vaU3kG18dBdJvw2OhoE6Kmic-Zzs9P1426zw/viewform?embedded=true" frameborder="0" style="width:100%;height:100%;" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
