--- a/indexnew.html
+++ b/indexnew.html
@@ -85,10 +85,10 @@ margin-right: 6px;
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2 id="intrograph" style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
-<figure>
+<!--<figure>
   <img src="rollup.JPG" width="128px">
   <figcaption>&ShortUpArrow; Eating a fruit roll-up</figcaption>
-</figure>
+</figure>-->
 
 	  <hr>
     <h2>Recent work</h2>
