--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -8,6 +8,13 @@
   body {
 font-family:skyFall
   }
+
+  #headerDiv {
+    text-align:center;
+  }
+  #contentDiv {
+text-align:center;
+  }
 </style>
 
   
@@ -15,8 +22,27 @@ font-family:skyFall
 
 
 <body>
-
+<div id="headerDiv">
   <h1>Codenames Cluefinder</h1>
+</div>
+  <div id="contentDiv">
+    <table>
+<tr>
+  <th>Blue words</th>
+  <th>Red words</th>
+</tr>
+      <tr>
+
+        <td>
+          <textarea></textarea>
+        </td>
+        <td>
+          <textarea></textarea>
+        </td>
+      </tr>
+    </table>
+    
+  </div>
 </body>
   
 </html>
