--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -41,8 +41,16 @@ text-align:center;
         </td>
       </tr>
     </table>
+
+
+
+<input type="checkbox" id="switch" />
+
+
     
   </div>
+
+  
 </body>
   
 </html>
