--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -11,9 +11,18 @@ font-family:skyFall
 
   #headerDiv {
     text-align:center;
+     background: rgb(255,145,0);
+background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
   }
   #contentDiv {
 text-align:center;
+  }
+
+  #generate {
+    padding:30px;
+     background: rgb(255,145,0);
+background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
+    font-family:skyFall !important;
   }
 </style>
 
@@ -46,7 +55,7 @@ text-align:center;
 
 <input type="checkbox" id="switch" />
 
-
+<button id="generate"></button>
     
   </div>
 
