--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -13,6 +13,8 @@ font-family:skyFall
     text-align:center;
      background: rgb(255,145,0);
 background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
+    padding:20px;
+    border-radius:12px;
   }
   #contentDiv {
 text-align:center;
@@ -23,6 +25,8 @@ text-align:center;
      background: rgb(255,145,0);
 background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
     font-family:skyFall !important;
+        border-radius:12px;
+color:white;
   }
 </style>
 
@@ -55,7 +59,7 @@ background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%,
 
 <input type="checkbox" id="switch" />
 
-<button id="generate"></button>
+<button id="generate">Generate clues</button>
     
   </div>
 
