--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -22,8 +22,7 @@ text-align:center;
 
   #generate {
     padding:30px;
-     background: rgb(255,145,0);
-background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
+     background: rgba(255,145,0)
     font-family:skyFall !important;
         border-radius:12px;
 color:white;
