--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -10,6 +10,7 @@ font-family:skyFall
   }
 
   #headerDiv {
+    color:white;
     text-align:center;
      background: rgb(255,145,0);
 background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
@@ -22,7 +23,7 @@ text-align:center;
 
   #generate {
     padding:30px;
-     background: rgba(255,145,0)
+     background: rgb(255,145,0)
     font-family:skyFall !important;
         border-radius:12px;
 color:white;
@@ -42,9 +43,18 @@ color:white;
 <tr>
   <th>Blue words</th>
   <th>Red words</th>
+  <th>Bystander words</th>
+  <th>Assassin</th>
+
 </tr>
       <tr>
 
+        <td>
+          <textarea></textarea>
+        </td>
+        <td>
+          <textarea></textarea>
+        </td>
         <td>
           <textarea></textarea>
         </td>
