--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -6,7 +6,10 @@
     src: url(skyfall.ttf);
 }
   body {
-font-family:skyFall
+font-family:skyFall;
+    margin-left:250px;
+    margin-right:250px;
+    
   }
 
   #headerDiv {
